<resources>
    <string name="app_name">ACTIVO FIJO</string>

    <string-array name="serial">
        <item>a33e8c8b930e63be</item> <!-- ´Pruebas Pedro -->
        <item>5f8aaa87577450c8</item> <!-- Emulador -->
    </string-array>

    <string name="deshacer">DESHACER</string>
    <string name="zero">0</string>
    <string name="le_dos">Leídos</string>
    <string name="codigo">CÓDIGO</string>
    <string name="tipo">TIPO</string>
    <string name="codetype">CODIFICACIÓN</string>
    <string name="epc">EPC</string>
    <string name="cant_reads">No. Lecturas</string>
    <string name="rssi">Max. RSSI</string>
    <string name="filtro">Filtro</string>
    <string name="esperados">Esperados</string>
    <string name="nomb_arch">Nombre Archivo</string>
    <string name="correctos">Correctos</string>
    <string name="butCambiar">Cambiar</string>
    <string name="faltantes">Faltantes</string>
    <string name="sobrante">Sobrantes</string>
    <string name="butCancelar">CANCELAR</string>
    <string name="butAceptar">ACEPTAR</string>
    <string name="partition">PARTICIÓN</string>
    <string name="sort">ORDENAR</string>
    <string name="msgGuardado">Datos guardados</string>
    <array name="encabezados_rfid">
        <item>@string/epc</item>
        <item>@string/codetype</item>
        <item>@string/cant_reads</item>
        <item>@string/rssi</item>
        <item>Tag Tipo</item>
        <item>RESULTADO</item>
    </array>

    <array name="encabezados_barcode">
        <item>Código</item>
        <item>Tipo</item>
        <item>Cantidad</item>
    </array>

    <!--********************DATOS ASTLIX*******************************-->
    <string name="imagen_astlix">Astlix SA de CV</string>
    <string name="telefono_astlix">+52 (55) 4051 7099</string>
    <string name="mail_astlix">soporte@astlix.com</string>
    <string name="paginaweb">https://www.astlix.com</string>

    <!--********************DIALOGO POTENCIA*******************************-->
    <string name="potTit">Potencia</string>
    <string name="potMsg">Establezca la potencia de Lectura</string>
    <string name="butInit">INIT</string>
    <string name="esperar">ESPERAR...</string>
    <string name="menu">MENU</string>
    <string name="cerca"> CERCA</string>
    <string name="medio"> MEDIO</string>
    <string name="lejos"> LEJOS</string>
    <string name="enviar">ENVIAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="mail">Correo</string>
    <string name="descargar">Descargar</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="pagina">Página</string>
    <string name="version">Versión</string>
    <string name="seleccionar">Seleccionar</string>
    <string name="exit">Salir</string>

    <!--********************DIALOGOS*******************************-->
    <string name="administrador">Administrador</string>
    <string name="operador">Operador</string>
    <string name="usuario">Usuario</string>
    <string name="usuario_hint">Usuario</string>
    <string name="root">root</string>
    <string name="contrase_a">Contraseña</string>
    <string name="errPswLen">La contraseña debe ser al menos de 5 caracteres </string>
    <string name="errUsrDup">Usuarios duplicados</string>
    <string name="errUsrRes">Usuario root reservado</string>
    <string name="editar_usuario">Editar usuario</string>
    <string name="usuario_form">Usuario:</string>
    <string name="pass">*****</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="guardar">guardar</string>
    <string name="agregar_usuario">Agregar usuario nuevo\n</string>
    <string name="permisos">Rol:</string>
    <string name="logo_astlix">Astlix SA de CV</string>
    <string name="butEntrar">ENTRAR</string>
    <string name="url_sql_server">URL SQL Server</string>
    <string name="base_de_datos_sql_server">Base de Datos SQL Server</string>
    <string name="usuario_sql_server">Usuario SQL Server</string>
    <string name="contrase_a_sql_server">Contraseña SQL Server</string>
    <string name="test">test</string>
    <string name="butGuardar">Guardar</string>
    <string name="butClose">Cerrar</string>

    <!--********************FILTROS*******************************-->
    <string name="FILTRO">FILTRO</string>
    <string name="CLEAN">BORRAR</string>
    <string name="NEW">NUEVO</string>
    <string name="errFitlRep">Filtro repetido</string>
    <string name="errFiltFormat">Error de formato de Filtro</string>
    <string name="errFiltEmpty">Filtro vacío</string>
    <string name="advEraseFilt">Si continúna, se borrará el filtro</string>
    <string name="butCont">Continuar</string>
    <string name="butCancel">Cancelar</string>
    <string name="confirmDelete">Eliminar Filtro</string>
    <string name="advBackPrs">Si continúa, no se guardará el progreso del inventario</string>
    <string name="advCleanPrs">Si continúna, se borrará el progreso del inventario</string>
    <string name="warNoChanges">No se encontraron cambios en el formulario</string>

    <!--********************ARCHIVOS*******************************-->
    <string name="menu4s1Tit">CONFIGURAR ARCHIVO</string>
    <string name="menu4s1InpF">Archivo:</string>
    <string name="menu4s1InpFTip">archivo entrada</string>
    <string name="menu4s1OutP">Salida:</string>
    <string name="menu4s1OutFTip">sufijo archivo salida</string>
    <string name="menu4s1Col1">Encabezados</string>
    <string name="menu4s1ResInv">Resultado:</string>
    <string name="menu4s1FechaInv">Fecha:</string>
    <string name="butOff">Off</string>
    <string name="butOn">On</string>
    <string name="emptyTxt">Algo</string>
    <string name="status">Status</string>

    <string name="menu4s1DiaVis">Visible:</string>
    <string name="menu4s1DiaEdit">Editable:</string>
    <string name="menu4s1DiaFil">Filtro:</string>
    <string name="menu4s1DiaIndex">Indexable:</string>
    <string name="menu4s1DiaPrimKey">Llave:</string>
    <string name="menu4s1ErrVacio">Campos vacíos</string>


    <!--********************ENCABEZADOS*******************************-->
    <string name="errBDdat">No se pueden obtener datos de la Base de Datos</string>
    <string name="errArchTerm">El archivo de salida debe tener la terminación .xlsx</string>
    <string name="errNoColumn">No se encontró la columna </string>
    <string name="errIdDup">Id duplicado </string>
    <string name="errFileNF">No se encontró el archivo</string>
    <string name="errReadInpS">Error al leer archivo</string>
    <string name="errPermisos">No se tienen los permisos</string>
    <string name="errLinRep">Se encontraron</string>
    <string name="errLinRep2">lineas repetidas</string>
    <string name="errLinEnc">lineas con encabezado erróneo</string>
    <string name="errLinLen">lineas con longitud errónea</string>
    <string name="errNoFilt">No se encontraron filtros</string>
    <string name="errNoEnc">No se encontraron encabezados para mostrar</string>
    <string name="errInvVacio">Inventario vacío</string>
    <string name="errConfEmpty">No hay configuración</string>
    <string name="errNoPk">No se encontró llave primaria</string>
    <string name="errSecEmpty">Secret vacío</string>
    <string name="errIdRep">Error Tag Repetido</string>
    <string name="errIdLen">Error de longitud de Tag</string>
    <string name="errIdEnc">Error de encabezado de Tag</string>
    <string name="errDesc">Error desconocido</string>
    <string name="errProCan">Proceso cancelado</string>
    <string name="menu4s1DiaTit">Archivos Excel</string>
    <string name="menu4s1DiaPhra">Seleccione un archivo de la lista.</string>
    <string name="archTxt">archivos</string>
    <string name="check">check</string>
    <string name="times">times</string>


    <!--********************TAGS*******************************-->
    <string name="tag_buscar">Tag a buscar</string>
    <string name="menu2s1tit">CONSULTA DE ACTIVOS</string>
    <string name="menu2s1enc">Información de Registro</string>
    <string name="menu2s1promptTit">Activo a buscar</string>
    <string name="menu2s1GuardarForm">Está a punto de guardar los cambios del formulario</string>
    <string name="menu1s1DiaTit">Filtros</string>
    <string name="menu1s1DiaPhra">Seleccionar filtro</string>

    <string name="menu1s1TitModAct">Modificar Activo</string>
    <string name="menu1s1DiagMsgModAct">Ingrese los datos del Activo:</string>
    <string name="menu1s1GuardarInv">Está a punto de guardar el avance del inventario</string>
    <string name="menu1s1NoCambios">NO HAY CAMBIOS</string>
    <string name="menu1s1ActBusc">Activo a buscar:</string>


    <string name="key">key</string>
    <string name="bookmark">bookmark</string>
    <string name="msgExportado">Inventario Exportado</string>
    <string name="SeleccionarArchivo">Selecciona la obtencion de los activos</string>
 </resources>