<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_root2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/titDialMen4"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emptyTxt"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white">
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swVis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/menu4s1DiaVis"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textOff="@string/butOff"
            android:textOn="@string/butOn"
            android:thumb="@drawable/thumb_gray"
            app:showText="true"
            app:switchMinWidth="70dp"
            app:track="@drawable/track_switch_green"
            android:paddingEnd="70dp"
            android:paddingStart="70dp"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swEdi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:text="@string/menu4s1DiaEdit"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textOff="@string/butOff"
            android:textOn="@string/butOn"
            android:thumb="@drawable/thumb_gray"
            app:showText="true"
            app:switchMinWidth="70dp"
            app:track="@drawable/track_switch_green"
            android:paddingEnd="70dp"
            android:paddingStart="70dp"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swFil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:text="@string/menu4s1DiaFil"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textOff="@string/butOff"
            android:textOn="@string/butOn"
            android:thumb="@drawable/thumb_gray"
            app:showText="true"
            app:switchMinWidth="70dp"
            app:track="@drawable/track_switch_green"
            android:paddingEnd="70dp"
            android:paddingStart="70dp"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swInd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:text="@string/menu4s1DiaIndex"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textOff="@string/butOff"
            android:textOn="@string/butOn"
            android:thumb="@drawable/thumb_gray"
            app:showText="true"
            app:switchMinWidth="70dp"
            app:track="@drawable/track_switch_green"
            android:paddingEnd="70dp"
            android:paddingStart="70dp"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swPrk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:checked="false"
            android:text="@string/menu4s1DiaPrimKey"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textOff="@string/butOff"
            android:textOn="@string/butOn"
            android:thumb="@drawable/thumb_gray"
            app:showText="true"
            app:switchMinWidth="70dp"
            app:track="@drawable/track_switch_green"
            android:paddingEnd="70dp"
            android:paddingStart="70dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:baselineAligned="false">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/guardarEnc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:lottie_fileName="next.json"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</LinearLayout>