<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/urlServer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_edittext_white"
        android:drawableStart="@drawable/ic_cloud"
        android:drawablePadding="15dp"
        android:hint="@string/url_sql_server"
        android:inputType="textUri"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/baseServer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/urlServer"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_edittext_white"
        android:drawableStart="@drawable/ic_database"
        android:drawablePadding="15dp"
        android:hint="@string/base_de_datos_sql_server"
        android:inputType="text"
        android:textSize="20sp"
            tools:ignore="Autofill" />

    <EditText
        android:id="@+id/userServer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/baseServer"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_edittext_white"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="15dp"
        android:hint="@string/usuario_sql_server"
        android:inputType="text"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/passServer"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_below="@+id/userServer"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_edittext_white"
        android:drawableStart="@drawable/ic_pass"
        android:drawablePadding="15dp"
        android:hint="@string/contrase_a_sql_server"
        android:inputType="textPassword"
        android:textSize="20sp"
        tools:ignore="Autofill" />

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passServer"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/butGuardar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:background="@drawable/button_login"
            android:drawableStart="@drawable/ic_save"
            android:text="@string/butGuardar"
            android:textColor="@color/grisAstlix"
            android:textSize="20sp" />

        <Button
            android:id="@+id/butTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_weight="2"
            android:background="@drawable/button_login"
            android:drawableStart="@drawable/ic_save"
            android:text="@string/test"
            android:textColor="@color/grisAstlix"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeStatus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/botones"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="visible">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/connectionStatus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="false" />
    </RelativeLayout>
</RelativeLayout>