<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/menu4_rectangle"
    android:layout_margin="10dp">
    <TextView
        android:id="@+id/titPrincipalFilt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/grisTrans"
        android:text="@string/FILTRO"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"/>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="5dp"
        android:layout_weight="1"/>
    <EditText
        android:id="@+id/editFiltro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyEditTextStyleGrey"
        android:textSize="14sp"
        android:padding="9dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:inputType="text"
        tools:ignore="Autofill,LabelFor" />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_weight="1"/>
    <LinearLayout
        android:id="@+id/diagBotonesFilt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:id="@+id/digGuardarFilt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:background="@drawable/button_menu4_blue"
            android:clickable="true"
            android:focusable="true">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/butGuardar"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />
            <com.example.pp_android_handheld_library.view.clases.IconGeneric
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/save"
                tools:ignore="NestedWeights" />
        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
        <LinearLayout
            android:id="@+id/diagCancelFilt"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:background="@drawable/button_menu4_blue"
            android:clickable="true"
            android:focusable="true">
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/butCancel"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />
            <com.example.pp_android_handheld_library.view.clases.IconGeneric
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/times"
                tools:ignore="NestedWeights" />

        </LinearLayout>
        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>